# LandmarkIdentificationFrameworks

./: README.md
Heatmaps/: README.md  pyproject.toml  run_pipeline.ps1  run_pipeline.sh
Heatmaps/Heatmaps/: __init__.py  custom_dataset.py  heatmap_training_pipeline.py  heatmap_transforms.py  model_registry.py  models.py  parameters.py  train_model.py
Heatmaps/Heatmaps/utils/: __init__.py  io_utils.py  progress_bar.py  verify_transforms.py  visualisation_utils.py
IPV/: README.md  pyproject.toml
IPV/IPV/: __init__.py  create_dataset_and_train_model.py  custom_dataset.py  data_creator.py  gpu_utils.py  infer_landmarks.py  ipv_training_pipeline.py  landmark_inference.py  landmark_inference_utils.py  model_registry.py  parameters.py  quadruplet.py  run_pipeline.ps1  run_pipeline.sh  test_model.py  train_model.py
IPV/IPV/utils/: generate_folds.py  landmark_inference_utils.py  progress_bar.py
